# WhatsApp-Status-Checker

./: .env  .gitignore  LICENSE  MIGRATION.md  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
.gemini/skills/: atomic_git_commits.md  pr_title_description.md
src/: main.py  vars.py
src/utils/: get_chrome_version.py
src/whatsapp-status-checker/: __init__.py  config.py  main.ipynb  main.py  vars.py
src/whatsapp-status-checker/core/: __init__.py  app.py  app_controller.py  status_handlers.py  webdriver_manager.py  whatsapp_operations.py
src/whatsapp-status-checker/utils/: __init__.py  envvar_and_whatsapp_msg_test.py  get_chrome_version.py  helpers.py  organize_chromedriver.py
src/whatsapp_status_checker/: __init__.py  __main__.py  config.py  main.ipynb  vars.py
src/whatsapp_status_checker/core/: __init__.py  app.py  patch_status_get.py  patches.py  status_handlers.py  webdriver_manager.py  whatsapp_operations.py
src/whatsapp_status_checker/utils/: __init__.py  get_chrome_version.py  helpers.py  organize_chromedriver.py
tests/: conftest.py  test_health.py  test_modes.py  test_realtime.py  test_status_processing.py
utils/: envvar_and_whatsapp_msg_test.py  organize_chromedriver.py
