[project]
name = "camouchat-status-checker"
version = "0.2.0"
description = "WhatsApp Status Checker using CamouChat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camouchat-whatsapp>=0.7.3",
    "python-dotenv>=1.1.1",
    "pytz>=2026.2",
    "art>=6.1.1",
    "callmebot",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
callmebot = { git = "https://github.com/gabrielrih/callmebot.git" }

[tool.uv]
package = true

[project.scripts]
wsc = "whatsapp_status_checker.__main__:main"

