[project]
name = "camouchat-status-checker"
version = "0.2.0"
description = "WhatsApp Status Checker using CamouChat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camouchat-whatsapp==0.7.3",
    "python-dotenv==1.2.2",
    "art==6.5",
    "callmebot>=1.0.2",
    "qrcode==7.4.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
callmebot = { git = "https://github.com/gabrielrih/callmebot.git" }

[tool.uv]
package = true

[project.scripts]
wsc = "whatsapp_status_checker.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

